Fix bug making SVGs unrenderable on iOS
Was trying to send my GitHub Pages to someone for testing,
when I found out that the SVGs within the buttons weren't rendering.

Turns out, on pretty much all safari browsers, and iOS devices I tested,
if you don't set the size of the SVG within your stylesheet, it simply
won't render.

--- a/style.scss
+++ b/style.scss
@@ -55,6 +55,8 @@ main {
   svg {
     fill: $clr-text-white;
     pointer-events: none;
+    height: 100%;
+    width: 100%;
 
     path {
       pointer-events: none;
